native/ffmpeg_compat.h

typedef struct UpAvFrame UpAvFrame;
// 0 = progressive, 1 = top field first, 2 = bottom field first.
int up_av_frame_field(const UpAvFrame *frame);
void up_av_frame_dimensions(const UpAvFrame *frame, int *width, int *height);
UpAvFrame *up_av_frame_clone(const UpAvFrame *frame);
typedef struct UpLumaView {
    UpAvFrame *frame;
    const uint8_t *data;
    int width, height, stride, step, depth, shift, big_endian, full_range;
} UpLumaView;
int up_av_frame_luma(const UpAvFrame *frame, UpLumaView *view);
void up_av_frame_luma_free(UpLumaView *view);