native/platform.h

typedef struct UpWindow UpWindow;
typedef struct UpAudioStream UpAudioStream;
UpWindow *up_window_create(const char *title, int width, int height);
void up_window_destroy(UpWindow *window);
int up_window_size(UpWindow *window, int *width, int *height);
int up_window_pixel_size(UpWindow *window, int *width, int *height);
int up_window_set_minimum_size(UpWindow *window, int width, int height);
int up_window_set_fullscreen(UpWindow *window, int fullscreen);
UpAudioStream *up_audio_stream_create(int rate, int channels);
void up_audio_stream_destroy(UpAudioStream *stream);
int up_audio_stream_put(UpAudioStream *stream, const void *data, int bytes);
int up_audio_stream_queued(UpAudioStream *stream);
int up_audio_stream_resume(UpAudioStream *stream);
int up_audio_stream_pause(UpAudioStream *stream);
int up_audio_stream_clear(UpAudioStream *stream);