src/ffi.rs

unsafe extern "C" {
    pub fn up_window_create(
        title: *const ::std::os::raw::c_char,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> *mut UpWindow;
}
unsafe extern "C" {
    pub fn up_window_destroy(window: *mut UpWindow);
}
unsafe extern "C" {
    pub fn up_window_size(
        window: *mut UpWindow,
        width: *mut ::std::os::raw::c_int,
        height: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_window_pixel_size(
        window: *mut UpWindow,
        width: *mut ::std::os::raw::c_int,
        height: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_window_set_minimum_size(
        window: *mut UpWindow,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_window_set_fullscreen(
        window: *mut UpWindow,
        fullscreen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_audio_stream_create(
        rate: ::std::os::raw::c_int,
        channels: ::std::os::raw::c_int,
    ) -> *mut UpAudioStream;
}
unsafe extern "C" {
    pub fn up_audio_stream_destroy(stream: *mut UpAudioStream);
}
unsafe extern "C" {
    pub fn up_audio_stream_put(
        stream: *mut UpAudioStream,
        data: *const ::std::os::raw::c_void,
        bytes: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_audio_stream_queued(stream: *mut UpAudioStream) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_audio_stream_resume(stream: *mut UpAudioStream) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_audio_stream_pause(stream: *mut UpAudioStream) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_audio_stream_clear(stream: *mut UpAudioStream) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct UpVideoRenderer {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn up_video_renderer_create(window: *mut ::std::os::raw::c_void) -> *mut UpVideoRenderer;
}
unsafe extern "C" {
    pub fn up_video_renderer_device(renderer: *mut UpVideoRenderer) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn up_video_renderer_display(
        renderer: *mut UpVideoRenderer,
        frame: *mut ::std::os::raw::c_void,
        previous: *mut ::std::os::raw::c_void,
        next: *mut ::std::os::raw::c_void,
        field: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        overlay: *const UpOverlayFrame,
        crop: *const UpVideoCrop,
        fill: ::std::os::raw::c_int,
        subtitle_text: *const ::std::os::raw::c_char,
        subtitle_pixels: *const u8,
        subtitle_width: ::std::os::raw::c_int,
        subtitle_height: ::std::os::raw::c_int,
        subtitle_serial: u64,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_video_renderer_resize(
        renderer: *mut UpVideoRenderer,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn up_video_renderer_error(
        renderer: *const UpVideoRenderer,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn up_video_renderer_destroy(renderer: *mut UpVideoRenderer);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct UpWaylandInput {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn up_wayland_input_create(window: *mut ::std::os::raw::c_void) -> *mut UpWaylandInput;
}
unsafe extern "C" {
    pub fn up_wayland_input_ready(input: *const UpWaylandInput) -> bool;
}
unsafe extern "C" {
    pub fn up_wayland_input_error(input: *const UpWaylandInput) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn up_wayland_input_destroy(input: *mut UpWaylandInput);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct UpMpris {
    _unused: [u8; 0],
}
pub const UP_MPRIS_VALUE_BOOL: u32 = 1;
pub const UP_MPRIS_VALUE_INT64: u32 = 2;
pub const UP_MPRIS_VALUE_DOUBLE: u32 = 3;
pub const UP_MPRIS_VALUE_STRING: u32 = 4;
pub const UP_MPRIS_VALUE_EMPTY_STRINGS: u32 = 5;
pub const UP_MPRIS_VALUE_METADATA: u32 = 6;
#[repr(C)]
#[derive(Default)]
pub struct UpMprisValue {
    pub kind: u32,
    pub integer: i64,
    pub real: f64,
    pub text: *const ::std::ffi::c_char,
    pub track_id: *const ::std::ffi::c_char,
    pub title: *const ::std::ffi::c_char,
    pub uri: *const ::std::ffi::c_char,
    pub duration_us: i64,
}
#[repr(C)]
pub struct UpMprisCallbacks {
    pub data: *mut ::std::ffi::c_void,
    pub command: unsafe extern "C" fn(
        *mut ::std::ffi::c_void,
        bool,
        *const ::std::ffi::c_char,
        *const ::std::ffi::c_char,
        i64,
    ),
    pub property: unsafe extern "C" fn(
        *mut ::std::ffi::c_void,
        bool,
        *const ::std::ffi::c_char,
        *mut UpMprisValue,
    ) -> bool,
}
unsafe extern "C" {
    pub fn up_mpris_create(
        bus_name: *const ::std::ffi::c_char,
        xml: *const ::std::ffi::c_char,
        callbacks: *const UpMprisCallbacks,
    ) -> *mut UpMpris;
    pub fn up_mpris_active(mpris: *const UpMpris) -> i32;
    pub fn up_mpris_error(mpris: *const UpMpris) -> *const ::std::ffi::c_char;
    pub fn up_mpris_dispatch(mpris: *mut UpMpris);
    pub fn up_mpris_status_changed(mpris: *mut UpMpris, status: *const ::std::ffi::c_char);
    pub fn up_mpris_seeked(mpris: *mut UpMpris, position_us: i64);
    pub fn up_mpris_destroy(mpris: *mut UpMpris);
}

#[repr(C)]
#[derive(Default)]
pub struct UpTextMask {
    pub pixels: *const u8,
    pub surface: *mut ::std::ffi::c_void,
    pub width: i32,
    pub height: i32,
    pub stride: i32,
}
unsafe extern "C" {
    pub fn up_text_normalize(
        text: *const ::std::ffi::c_char,
        length: usize,
    ) -> *mut ::std::ffi::c_char;
    pub fn up_text_free(text: *mut ::std::ffi::c_char);
    pub fn up_text_decompose(character: u32, result: *mut u32, capacity: usize) -> usize;
    pub fn up_text_mask_create(
        text: *const ::std::ffi::c_char,
        length: usize,
        mask: *mut UpTextMask,
    ) -> bool;
    pub fn up_text_mask_free(mask: *mut UpTextMask);
}
#[repr(C)]
pub struct UpOverlayImage {
    pub pixels: *const u8,
    pub width: i32,
    pub height: i32,
    pub serial: u64,
}
#[repr(C)]
#[derive(Debug)]
pub struct UpOverlayPart {
    pub texture: u32,
    pub src: [f32; 4],
    pub dst: [f32; 4],
    pub color: [f32; 4],
}
#[repr(C)]
pub struct UpOverlayFrame {
    pub text: UpOverlayImage,
    pub title: UpOverlayImage,
    pub parts: *const UpOverlayPart,
    pub count: usize,
}

#[repr(C)]
#[derive(Default)]
pub struct UpLumaView {
    pub frame: *mut UpAvFrame,
    pub data: *const u8,
    pub width: i32,
    pub height: i32,
    pub stride: i32,
    pub step: i32,
    pub depth: i32,
    pub shift: i32,
    pub big_endian: i32,
    pub full_range: i32,
}
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub struct UpVideoCrop {
    pub width: i32,
    pub height: i32,
    pub left: i32,
    pub top: i32,
    pub right: i32,
    pub bottom: i32,
}
unsafe extern "C" {
    pub fn up_av_frame_field(frame: *const UpAvFrame) -> i32;
    pub fn up_av_frame_dimensions(frame: *const UpAvFrame, width: *mut i32, height: *mut i32);
    pub fn up_av_frame_clone(frame: *const UpAvFrame) -> *mut UpAvFrame;
    pub fn up_av_frame_luma(frame: *const UpAvFrame, view: *mut UpLumaView) -> i32;
    pub fn up_av_frame_luma_free(view: *mut UpLumaView);
}
